--- a/css-intro/css-exercises/flex/02-flex-header/style.css
+++ b/css-intro/css-exercises/flex/02-flex-header/style.css
@@ -1,19 +1,28 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
 }
 
 a {
@@ -23,3 +32,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
