--- a/css-intro/css-exercises/flex/04-flex-information/style.css
+++ b/css-intro/css-exercises/flex/04-flex-information/style.css
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+  
 }
 
 /* do not edit this footer */
@@ -23,4 +26,15 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plants {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.plant {
+  text-align: center;
+  margin: 26px;
 }
