--- a/css-intro/css-exercises/flex/07-flex-layout-2/style.css
+++ b/css-intro/css-exercises/flex/07-flex-layout-2/style.css
@@ -2,28 +2,71 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 800;
+  padding-left: 16px;
+  
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding-right: 16px;
+}
+
+
+.sidebar-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: auto;
+  flex: 1;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex-wrap: wrap;
+  width: 200px;
+  margin: 10px;
+  
+}
+
+ul {
+  list-style-type: none;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
 }
